add swagger ui oferta by codigo ehcache
