# src/main/resources/static/swagger-apis/api1/swagger.yaml
@@ -496,6 +496,38 @@ paths:
         '405':
           description: Invalid input
       deprecated: false
+  /oferta/searchOferta/{codigoOferta}:
+    get:
+      tags:
+        - "oferta"
+      summary: "Buscar una oferta por su Codigo - EhCache"
+      description: "regresa una oferta"
+      operationId: "getOferta"
+      produces:
+        - "application/xml"
+        - "application/json"
+      parameters:
+        - name: "codigoOferta"
+          in: "path"
+          description: "Codigo de la Oferta"
+          required: true
+          type: "string"
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/Oferta'
+        '400':
+          description: Invalid ID supplied
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Oferta not found
+      deprecated: false
+  /oferta/allOfertas:
+    get:
 #      security:
 #        - petstore_auth:
 #            - "write:pets"
